@@ -136,7 +136,7 @@
 
 <addon id="plugin.video.pitelevision"
        name="PiTelevision.com"
-       version="1.6.0"
+       version="1.7.0"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
