@@ -32,3 +32,5 @@
 
 [B]Version 1.6[/B]
 - Updated the links as the site is accessible to international users
+[B]Version 1.7[/B]
+-Updated login
